Zeiteinheit von Sekunden auf Millisekunden geändert. Es werden jetzt 10 Mal pro Sekunde Ameisen erzeugt.

--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -1,10 +1,10 @@
-timeUnit = SECONDS
+timeUnit = MILLISECONDS
 
-antLaunchDelay = 1
+antLaunchDelay = 10
 
 varsigma = 0.005
 
-antLifetime = 5
+antLifetime = 5000
 
 speed.defaultSpeed = 50.0
 speed.motorway = 130.0
