Minimierung der Knoten für den AntNet-Algorithmus, indem mehrere OSM-Wege zu einem Ant-Weg zusammengefasst werden
Die für den AntNet-Algortihmus zu verwendende Strassen können eingeschränkt werden.

Weitere kleine Umbauten:

- Im Knoten werden keine Ziele, ein- und ausgehenden Wege mehr gespeichert. Diese Daten liegen im AntMap-Objekt.
- Die Knoten-Sequenz wurde in die Basis-Klasse Way verschoben.
- ApplicationController ist ein Zustandsautomat.

--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -1,6 +1,9 @@
+# Karte, die verwendet werden soll.
+map = maps/hamburg.osm
+
 timeUnit = MILLISECONDS
 
-antLaunchDelay = 10
+antLaunchDelay = 10000
 
 varsigma = 0.005
 
@@ -24,3 +27,5 @@ speed.walk = 10.0
 
 # Schwellwert für den Vergleich von zwei Doubles
 epsilon = 0.00001
+
+antMap.relevantHighways = motorway,motorway_link,trunk,trunk_link,primary,primary_link
