--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -3,27 +3,43 @@ map = maps/hamburg.osm
 
 timeUnit = MILLISECONDS
 
-antLaunchDelay = 10000
+antLaunchDelay = 5000
 
 varsigma = 0.005
 
-antLifetime = 5000
+antLifetime = 10000
 
-speed.defaultSpeed = 50.0
-speed.motorway = 130.0
-speed.motorway_link = 80.0
-speed.trunk = 100.0
-speed.trunk_link = 60.0
-speed.primary = 100.0
-speed.primary_link = 60.0
-speed.secondary = 70.0
-speed.tertiary = 50.0
-speed.residental = 50.0
-speed.service = 3.0
-speed.track = 30.0
-speed.none = 50.0
-speed.signals = 50.0
-speed.walk = 10.0
+# Default-Geschwindigkeiten in m/s
+# 50 km/h,
+speed.defaultSpeed = 13.8889
+# 130 km/h
+speed.motorway = 36.1111
+# 80 km/h
+speed.motorway_link = 22.2222
+# 100 km/h
+speed.trunk = 27.7778
+# 60 km/h
+speed.trunk_link = 16.6667
+# 100 km/h
+speed.primary = 27.7778
+# 60 km/h
+speed.primary_link = 16.6667
+# 70 km/h
+speed.secondary = 19.4444
+# 50 km/h
+speed.tertiary = 13.8889
+# 50 km/h
+speed.residental = 13.8889
+# 3 km/h
+speed.service = 0.8333
+# 30 km/h
+speed.track = 8,3333
+# 50 km/h
+speed.none = 13.8889
+# 50 km/h
+speed.signals = 13.8889
+# 10 km/h
+speed.walk = 2.7778
 
 # Schwellwert für den Vergleich von zwei Doubles
 epsilon = 0.00001
