--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -45,3 +45,5 @@ speed.walk = 2.7778
 epsilon = 0.00001
 
 antMap.relevantHighways = motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary
+
+antCountPerSource = 10
