Datentyp der Pheromon-Matrix im Pheromon-Matrix-Initialisierer sowie den Rückgabewert-Datentyp der Funktion AntMap .path verändert, um von einem Knoten unerreichbare Ziele abbilden zu können. ShortestPathsPheromoneMatrixInitializer berechnet  für die Initialiserung der Pheromon-Matrix den besten ausgehenden Weg von einem Quell-Knoten bezüglich eines Ziel-Knotens. Berechnung der kürzesten Pfade deparallelisiert, die Datentypen für die Berechnung aber nicht verändert.

--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -47,3 +47,7 @@ epsilon = 0.00001
 antMap.relevantHighways = motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary
 
 antCountPerSource = 10
+
+# Mit diesem Wert wird der beste Weg in der Pheromon-Matrix initialisiert, der als nächstes auf dem Weg zum Ziel
+# besucht werden sollte.
+bestWayPheromone = 0.8
