Ameisen sind Zustände(Nachrichten), die vom Knoten zu Knoten geschickt und dort erweitert werden.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,9 +12,12 @@ ant-scout {
     # Relatives Gewicht der heuristischen Information, die in die Berechnung der Wahrscheinlichkeiten einfließt.
     alpha = 0.2
 
-    # Lebenszeit" einer Ameise in Millisekunden. Wenn die Ameisen ihr Ziel nicht innerhalb dieser Zeit erreicht hat,
+    # Intervall in Millisekunden, in dem die Ameisen erzeugt werden.
+    ant-launch-delay = 1000
+
+    # Maximales Alter einer Ameise in Millisekunden. Wenn die Ameise ihr Ziel nicht innerhalb dieser Zeit erreicht hat,
     # wird sie aus dem System entfernt.
-    ant-lifetime = 10000
+    max-ant-age = 10000
 
     # Mit diesem Wert wird der beste Weg in der Pheromon-Matrix initialisiert, der als nächstes auf dem Weg zum Ziel
     # besucht werden sollte.
