Anzeige der Statistiken (Anzahl erzeugter Ameisen und Anzahl der Ameisen, die ihr Ziel erreicht haben) im Frontend.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -82,6 +82,9 @@ ant-scout {
   # Karte, die verwendet werden soll.
   map = maps/Altona-Wedel.osm
 
+  # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden.
+  process-statistics-delay = 1
+
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
   relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary]
 }
