Ameisen werden in Abständen umgekehrt proportional zur Ziel-Entfernung erzeugt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,8 +12,20 @@ ant-scout {
     # Relatives Gewicht der heuristischen Information, die in die Berechnung der Wahrscheinlichkeiten einfließt.
     alpha = 0.2
 
-    # Intervall in Millisekunden, in dem die Ameisen erzeugt werden.
-    ant-launch-delay = 1000
+    # Parameter, die zum Erzeugen der Ameisen benötigt werden.
+    ants-launch {
+
+      # Die von einem Knoten aus erreichbaren Ziele werden in Gruppen unterteilt. Dieser Parameter (Angabe in Metern)
+      # entscheidet, in welchen Abständen eine neue Gruppe erzeugt wird.
+      group-distance = 1000
+
+      # Intervall in Millisekunden, in dem Ameisen mit Zielen aus der am weitesten entfernten Gruppe erzeugt werden.
+      initial-delay = 1000
+
+      # Mit abnehmender Entfernung wird pro Gruppe dieser Wert (Angabe in Millisekunden) zum initial-delay hinzu
+      # addiert.
+      delay-increment = 100
+    }
 
     # Maximales Alter einer Ameise in Millisekunden. Wenn die Ameise ihr Ziel nicht innerhalb dieser Zeit erreicht hat,
     # wird sie aus dem System entfernt.
@@ -80,6 +92,9 @@ ant-scout {
   epsilon = 0.00001
 
   # Karte, die verwendet werden soll.
+  # map = maps/Altona-100-Knoten.osm
+  # map = maps/Altona-50-Knoten.osm
+  # map = maps/Altona-Kreis.osm
   map = maps/Altona-Wedel.osm
 
   # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden.
