Priorisierte Mailboxen für AntNodeSupervisor und AntNodes implementiert.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  loglevel = "DEBUG"
+  loglevel = WARNING
   actor {
     debug {
       autoreceive = off
@@ -9,4 +9,14 @@ akka {
       receive = off
     }
   }
+}
+
+# AntNodes sollen eine priorisierte Mailbox verwenden.
+ant-node-dispatcher {
+  mailbox-type = "de.fhwedel.antscout.antnet.AntNodeMailbox"
+}
+
+# AntNodeSupervisor soll eine priorisierte Mailbox verwenden.
+ant-node-supervisor-dispatcher {
+  mailbox-type = "de.fhwedel.antscout.antnet.AntNodeSupervisorMailbox"
 }
