Altona-100-Knoten.osm in Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm umbenannt, Karten-Grenzen angepasst, completeWays-Option etfernt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -92,7 +92,7 @@ ant-scout {
   epsilon = 0.00001
 
   # Karte, die verwendet werden soll.
-  # map = maps/Altona-100-Knoten.osm
+  # map = maps/Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm
   # map = maps/Altona-50-Knoten.osm
   # map = maps/Altona-Kreis.osm
   map = maps/Altona-Wedel.osm
@@ -101,5 +101,5 @@ ant-scout {
   process-statistics-delay = 1
 
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
-  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary]
+  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,tertiary]
 }
