--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -92,10 +92,16 @@ ant-scout {
   epsilon = 0.00001
 
   # Karte, die verwendet werden soll.
+  # 133 Knoten, 128 Quellen und Ziele
   # map = maps/Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm
+  # 47 Knoten, 43 Quellen und 45 Ziele
   # map = maps/Altona-50-Knoten.osm
+  # 14 Knoten, 12 Quellen und Ziele
   # map = maps/Altona-Kreis.osm
+  # 142 Knoten, 138 Quellen und Ziele
   map = maps/Altona-Wedel.osm
+  # 44 Knoten, Quellen und Ziele
+  # map = maps/Wedel.osm
 
   # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden.
   process-statistics-delay = 1
