Detaillierte Log-Ausgaben werden nur erzeugt, wenn es auch eingeschaltet ist. Lift läuft immer im Production-Modus. Ständige Collection-Konvertierungen beseitigt, da, wo es möglich war.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -108,4 +108,8 @@ ant-scout {
 
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
   relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,tertiary]
+
+  # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
+  # Senkt die Performance und sollte nur zur Fehlersuche eingeschaltet werden!
+  trace-is-enabled = false
 }
