Statistiken können per Konfiguration ausgeschaltet werden.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -103,7 +103,8 @@ ant-scout {
   # 44 Knoten, Quellen und Ziele
   # map = maps/Wedel.osm
 
-  # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden.
+  # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden. Der Wert 0 schaltet die Statistiken aus.
+  # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
   process-statistics-delay = 1
 
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
