--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,9 @@
 akka {
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-  loglevel = INFO
+  loglevel = DEBUG
   actor {
     debug {
-      autoreceive = off
-      fsm = off
-      lifecycle = off
-      receive = off
+      unhandled = on
     }
   }
 }
