Neue Karte "Blankenese-Wedel.osm" hinzugefügt. Koordinaten für "Wedel.osm" angepasst.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -93,14 +93,16 @@ ant-scout {
 
   # Karte, die verwendet werden soll.
   # 104 Knoten, 99 Quellen und 100 Ziele
-  map = maps/Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm
+  # map = maps/Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm
+  # 85 Knoten, 83 Quellen und 83 Ziele
+  map = maps/Blankenese-Wedel.osm
   # 47 Knoten, 43 Quellen und 45 Ziele
   # map = maps/Altona-50-Knoten.osm
   # 14 Knoten, 12 Quellen und Ziele
   # map = maps/Altona-Kreis.osm
   # 142 Knoten, 138 Quellen und Ziele
   # map = maps/Altona-Wedel.osm
-  # 44 Knoten, Quellen und Ziele
+  # 57 Knoten, 57 Quellen und 56 Ziele
   # map = maps/Wedel.osm
 
   # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden. Der Wert 0 schaltet die Statistiken aus.
@@ -112,5 +114,5 @@ ant-scout {
 
   # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
   # Senkt die Performance und sollte nur zur Fehlersuche eingeschaltet werden!
-  trace-is-enabled = false
+  trace-is-enabled = true
 }
