Einstellung "AntCountPerSource" entfernt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,8 +1,5 @@
 ant-scout {
 
-  # Anzahl der Ameisen, die pro Knoten erzeugt werden.
-  ant-count-per-source = 10
-
   # Parameter für den AntNet-Algorithmus
   ant-net {
 
@@ -48,6 +45,8 @@ ant-scout {
     varsigma = 0.1
 
     # Größe des gleitendes Beobachtungsfensters des lokalen statistischen Modells.
+    # Sollte nach Dorigo unt Stützle wie folgt berechnet werden:
+    # w-max = 5(c / varsigma) mit c <= 1
     w-max = 15
 
     # Parameter z für die Berechnung der Verstärkung.
