--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -104,6 +104,10 @@ ant-scout {
   # 57 Knoten, 57 Quellen und 56 Ziele
   # map = maps/Wedel.osm
 
+  # Maximale Pfad-Länge.
+  # Der Routing-Service bricht die Suche nach einem Pfad ab, wenn der Pfad diese Länge erreicht.
+  max-path-length = 100
+
   # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden. Der Wert 0 schaltet die Statistiken aus.
   # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
   process-statistics-delay = 1
