--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,8 +45,7 @@ ant-scout {
     varsigma = 0.1
 
     # Größe des gleitendes Beobachtungsfensters des lokalen statistischen Modells.
-    # Sollte nach Dorigo unt Stützle wie folgt berechnet werden:
-    # w-max = 5(c / varsigma) mit c <= 1
+    # Sollte nach Dorigo unt Stützle wie folgt berechnet werden: w-max = 5(c / varsigma) mit c <= 1.
     w-max = 15
 
     # Parameter z für die Berechnung der Verstärkung.
@@ -108,12 +107,25 @@ ant-scout {
   # Der Routing-Service bricht die Suche nach einem Pfad ab, wenn der Pfad diese Länge erreicht.
   max-path-length = 100
 
-  # Intervall in Sekunden, in dem Statistiken erzeugt und verarbeitet werden. Der Wert 0 schaltet die Statistiken aus.
-  # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
-  process-statistics-delay = 1
-
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
   relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,tertiary]
+
+  # Statistik-Einstellungen
+  statistics {
+
+    # Begrenzung der Buffer-Größen, in denen die Statistik-Werte gespeichert werden. Diese Werte werden genutzt, um z.B.
+    # Mittelwerte zu berechnen.
+    # 0 schaltet die Buffer-Begrenzung aus.
+    buffer-size = 0
+
+    # Schaltet die Statistiken ein oder aus.
+    # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
+    enabled = true
+
+    # Intervall in Sekunden, in dem Statistiken aufbereitet und im Front-End angezeigt werden.
+    # Bei 0 werden die Statistiken nicht aufbereitet und auch nicht im Front-End angezeigt.
+    processing-interval = 1
+  }
 
   # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
   # Senkt die Performance und sollte nur zur Fehlersuche eingeschaltet werden!
