Karten-Namen korrigiert.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -99,7 +99,7 @@ ant-scout {
   # 14 Knoten, 12 Quellen und Ziele
   # map = maps/Altona-Kreis.osm
   # 144 Knoten, 140 Quellen und 140 Ziele
-  # map = maps/Altona-Wedel.osm
+  # map = maps/Othmarschen-Wedel.osm
   # 61 Knoten, 60 Quellen und 60 Ziele
   # map = maps/Wedel.osm
 
