signals-Standard-Geschwindigkeit verfälscht die Geschwindigkeiten.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -81,7 +81,7 @@ ant-scout {
     # 50 km/h
     none = 13.8889
     # 50 km/h
-    signals = 13.8889
+    # signals = 13.8889
     # 10 km/h
     walk = 2.7778
   }
