Statistiken sind Standard-mäßig aus.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -120,14 +120,14 @@ ant-scout {
 
     # Schaltet die Statistiken ein oder aus.
     # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
-    enabled = true
+    enabled = false
 
     # Intervall in Sekunden, in dem Statistiken aufbereitet und im Front-End angezeigt werden.
     # Bei 0 werden die Statistiken nicht aufbereitet und auch nicht im Front-End angezeigt.
-    processing-interval = 1
+    processing-interval = 0
   }
 
   # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
   # Senkt die Performance und sollte nur zur Fehlersuche eingeschaltet werden!
-  trace-is-enabled = true
+  trace-is-enabled = false
 }
