Statistics in Monitoring umbenannt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -93,7 +93,7 @@ ant-scout {
   # 104 Knoten, 99 Quellen und 100 Ziele
   # map = maps/Bahrenfeld-Gross-Flottbek-Othmarschen-Ottensen.osm
   # 88 Knoten, 86 Quellen und 86 Ziele
-  map = maps/Blankenese-Wedel.osm
+  # map = maps/Blankenese-Wedel.osm
   # 47 Knoten, 43 Quellen und 45 Ziele
   # map = maps/Altona-50-Knoten.osm
   # 14 Knoten, 12 Quellen und Ziele
@@ -101,7 +101,7 @@ ant-scout {
   # 144 Knoten, 140 Quellen und 140 Ziele
   # map = maps/Othmarschen-Wedel.osm
   # 61 Knoten, 60 Quellen und 60 Ziele
-  # map = maps/Wedel.osm
+  map = maps/Wedel.osm
 
   # Maximale Pfad-Länge.
   # Der Routing-Service bricht die Suche nach einem Pfad ab, wenn der Pfad diese Länge erreicht.
@@ -110,21 +110,21 @@ ant-scout {
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
   relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,tertiary]
 
-  # Statistik-Einstellungen
-  statistics {
+  # Monitoring-Einstellungen
+  monitoring {
 
-    # Begrenzung der Buffer-Größen, in denen die Statistik-Werte gespeichert werden. Diese Werte werden genutzt, um z.B.
-    # Mittelwerte zu berechnen.
+    # Begrenzung der Buffer-Größen, in denen die Monitroing-Daten gespeichert werden. Diese Daten werden genutzt,
+    # um z.B. Mittelwerte zu berechnen.
     # 0 schaltet die Buffer-Begrenzung aus.
     buffer-size = 0
 
-    # Schaltet die Statistiken ein oder aus.
-    # Statistiken senken die Performance und sollten nur wenn nötig eingeschaltet werden!
-    enabled = false
+    # Intervall in Sekunden, in dem Monitoring-Daten aufbereitet und im Front-End angezeigt werden.
+    # Bei 0 werden die Monitoring-Daten nicht aufbereitet und auch nicht im Front-End angezeigt.
+    data-processing-interval = 0
 
-    # Intervall in Sekunden, in dem Statistiken aufbereitet und im Front-End angezeigt werden.
-    # Bei 0 werden die Statistiken nicht aufbereitet und auch nicht im Front-End angezeigt.
-    processing-interval = 0
+    # Schaltet das Monitoring ein oder aus.
+    # Monitoring senkt die Performance und sollte nur wenn nötig eingeschaltet werden!
+    enabled = false
   }
 
   # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
