secondary_link zu Weg-Klassen hinzugefügt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -108,7 +108,7 @@ ant-scout {
   max-path-length = 100
 
   # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
-  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,tertiary]
+  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,secondary_link,tertiary]
 
   # Monitoring-Einstellungen
   monitoring {
