Namen der Ameisenerzeugungsparameter angepasst.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,14 +14,14 @@ ant-scout {
 
       # Die von einem Knoten aus erreichbaren Ziele werden in Gruppen unterteilt. Dieser Parameter (Angabe in Metern)
       # entscheidet, in welchen Abständen eine neue Gruppe erzeugt wird.
-      group-distance = 1000
+      distance = 1000
 
       # Intervall in Millisekunden, in dem Ameisen mit Zielen aus der am weitesten entfernten Gruppe erzeugt werden.
-      initial-delay = 1000
+      interval = 1000
 
-      # Mit abnehmender Entfernung wird pro Gruppe dieser Wert (Angabe in Millisekunden) zum initial-delay hinzu
+      # Mit abnehmender Entfernung wird pro Gruppe dieser Wert (Angabe in Millisekunden) zum interval hinzu
       # addiert.
-      delay-increment = 100
+      interval-increment = 100
     }
 
     # Maximales Alter einer Ameise in Millisekunden. Wenn die Ameise ihr Ziel nicht innerhalb dieser Zeit erreicht hat,
