Varsigma in rho umbenannt.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -42,10 +42,10 @@ ant-scout {
 
     # Faktor, der die Anzahl der Messungen bestimmt, die zum Berechnen des Mittelwertes und der Varianz des lokalen
     # statistischen Modells verwendet werden.
-    varsigma = 0.005
+    rho = 0.005
 
     # Größe des gleitendes Beobachtungsfensters des lokalen statistischen Modells.
-    # Sollte nach Dorigo unt Stützle wie folgt berechnet werden: w-max = 5(c / varsigma) mit c <= 1.
+    # Sollte nach Dorigo unt Stützle wie folgt berechnet werden: w-max = 5(c / rho) mit c <= 1.
     w-max = 300
 
     # Parameter z für die Berechnung der Verstärkung.
