Initiale Parameter und Kommentare angepasst.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -17,18 +17,18 @@ ant-scout {
       distance = 1000
 
       # Intervall in Millisekunden, in dem Ameisen mit Zielen aus der am weitesten entfernten Gruppe erzeugt werden.
-      interval = 1000
+      interval = 600
 
       # Mit abnehmender Entfernung wird pro Gruppe dieser Wert (Angabe in Millisekunden) zum interval hinzu
       # addiert.
-      interval-increment = 100
+      interval-increment = 120
     }
 
     # Maximales Alter einer Ameise in Millisekunden. Wenn die Ameise ihr Ziel nicht innerhalb dieser Zeit erreicht hat,
     # wird sie aus dem System entfernt.
     max-ant-age = 10000
 
-    # Mit diesem Wert wird der beste Weg in der Pheromon-Matrix initialisiert, der als nächstes auf dem Weg zum Ziel
+    # Mit diesem Wert wird der beste Weg in der Präpheromonmatrix initialisiert, der als nächstes auf dem Weg zum Ziel
     # besucht werden sollte.
     best-way-pheromone = 0.8
 
@@ -107,13 +107,10 @@ ant-scout {
   # Der Routing-Service bricht die Suche nach einem Pfad ab, wenn der Pfad diese Länge erreicht.
   max-path-length = 100
 
-  # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
-  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,secondary_link,tertiary]
-
   # Monitoring-Einstellungen
   monitoring {
 
-    # Begrenzung der Buffer-Größen, in denen die Monitroing-Daten gespeichert werden. Diese Daten werden genutzt,
+    # Begrenzung der Buffer-Größen, in denen die Monitoring-Daten gespeichert werden. Diese Daten werden genutzt,
     # um z.B. Mittelwerte zu berechnen.
     # 0 schaltet die Buffer-Begrenzung aus.
     buffer-size = 0
@@ -126,6 +123,9 @@ ant-scout {
     # Monitoring senkt die Performance und sollte nur wenn nötig eingeschaltet werden!
     enabled = false
   }
+
+  # Weg-Klassen, die für den AntNet-Algorithmus berücksichtigt werden sollen.
+  relevant-highways = [motorway,motorway_link,trunk,trunk_link,primary,primary_link,secondary,secondary_link,tertiary]
 
   # Flag, ob detaillierte (Log-)Ausgaben erzeugt werden sollen.
   # Senkt die Performance und sollte nur zur Fehlersuche eingeschaltet werden!
