HafenCity als neue Karte hinzugefügt

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -116,7 +116,8 @@ ant-scout {
   # 144 Knoten, 140 Quellen und 140 Ziele
   # map = maps/Othmarschen-Wedel.osm
   # 61 Knoten, 60 Quellen und 60 Ziele
-  map = maps/Wedel.osm
+  # map = maps/Wedel.osm
+  map = maps/HafenCity.osm
 
   # Maximale Pfad-Länge.
   # Der Routing-Service bricht die Suche nach einem Pfad ab, wenn der Pfad diese Länge erreicht.
